Fixed modal text overflow issue

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -179,7 +179,7 @@ input:checked + label:after {
   bottom: 0;
   margin: auto;
   height: 10vh;
-  max-width: 700px;
+  max-width: 900px;
   border-radius: 5px;
   box-shadow: 0px 0px 6px 2px #666;
   background-color: #fff;
@@ -187,6 +187,7 @@ input:checked + label:after {
 }
 
 .modal-text {
+  font-size: 1.8rem;
   max-width: 660px;
-  margin: 30px auto;
+  margin: 3% auto;
 }
